# Face

./: .gitignore  CMakeLists.txt  README.md  dataa  datafile-Name  smy.txt
src/: main.cpp
src/camera/: camera.cpp  camera.hpp
src/controller/: ThreadChannel.cpp  ThreadChannel.hpp
src/database/: faceDB.cpp  faceDB.hpp
src/face/: face.cpp  face.hpp  faceDetect.cpp  faceDetect.hpp
src/ippg/: ippgProcess.cpp  ippgProcess.hpp
